# Android_Security

./: .gitmodules  Discount_Code.md  README.md
Automation_scripts/: README.md  apk2java  apk_assessment.sh  drozer_check.sh  drozer_start
Emulator/Android-Emulator/: Readme.md
Emulator/Genymotion/: GooglePlayStore.md  Readme.md
Exploitation/References/: Whitepaper.md
Exploitation/privilege_escalation/CVE-2015-3636/: poc.c
Exploitation/privilege_escalation/cansecwest2016-CVE-2015-6764/: README.md  exploit.html
Fuzzing/: README.md
Fuzzing/Anto/: Readme.md  exec_me.sh
Fuzzing/hacking-team/dbi/: AUTHOR  README  VERSION
Fuzzing/hacking-team/dbi/instruments/functions_coverage_array/hijack_func/tmp/libcfu-0.03/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  configure  configure.ac
Fuzzing/hacking-team/dbi/instruments/functions_coverage_array/hijack_func/tmp/libcfu-0.03/doc/: Makefile.am  Makefile.in  libcfu.info  libcfu.texi  stamp-vti
Fuzzing/hacking-team/dbi/instruments/functions_coverage_array/hijack_func/tmp/libcfu-0.03/examples/: Makefile.am  Makefile.in  conf_example.c  conf_example2.c  hash_usage.c  large_hash.c  opt_example.c  strings.c
Fuzzing/hacking-team/dbi/instruments/functions_coverage_array/hijack_func/tmp/libcfu-0.03/include/: cfu.h  cfu.h.in  cfuconf.h  cfuhash.h  cfulist.h  cfuopt.h  cfustring.h  cfuthread_queue.h  cfutime.h  cfutypes.h  cfutypes.h.in
Fuzzing/hacking-team/dbi/instruments/functions_coverage_array/hijack_func/tmp/libcfu-0.03/src/: Makefile.am  Makefile.in  TODO  cfu.c  cfuconf.c  cfuhash.c  cfulist.c  cfuopt.c  cfustring.c  cfuthread_queue.c  cfutime.c  libcfu-config.c
Fuzzing/hacking-team/jpg_fuzzer_android/: #fuzz_radamsa#  #test.py#  addr  addr2  check_addr  check_crash  check_crash3  fuzz_radamsa  log  log2  maps  test.py
Fuzzing/hacking-team/trinity-android/: gen_recursive.py  test.c
Obfuscation_challenges/: Readme.md
Practice/: Readme.md
References/: Whitepapers.md
Rooting/: GingerBreak.tgz  KillingInTheNameOf.tgz  Readme.md  exploid.tgz  psneuter.c  zergRush.c
Rooting/CVE-2016-5342/: README.md
Rooting/CVE-2016-5342/CVE-2016-5342/: README.md
Rooting/android-rooting-tools/android_device_database/: db_init.sql  device_database.c
Rooting/android-rooting-tools/android_device_database_utils/: README.md  delete_address.sh  export_address.sh  import_address.sh  set_address.sh  setup_variables.sh  show_address.sh  sqlite3
Rooting/android-rooting-tools/android_get_essential_address/: Android.mk  README.md  main.c  mm.c
Rooting/android-rooting-tools/android_run_root_shell/: .gitmodules  main.c
Rooting/android-rooting-tools/android_sqlite3/: .gitmodules  Android.mk
Rooting/android-rooting-tools/break_setresuid/: .gitmodules  Android.mk  README.md  main.c  perf_swevent.c
Rooting/android-rooting-tools/helper_tools/: README.md  arm7-dasm  extract_address_and_disassemble  get-perf_swevent_enabled  get-ptmx_fops  kallsymsprint.x86
Rooting/android-rooting-tools/libexploit/: .gitmodules  Android.mk  exploit.c
Rooting/android-rooting-tools/libfb_mem_exploit/: Android.mk
Rooting/android-rooting-tools/libfj_hdcp_exploit/: fj_hdcp.c
Rooting/android-rooting-tools/libfutex_exploit/: futex.c
Rooting/android-rooting-tools/libkallsyms/: kallsyms_in_memory.c
Rooting/ping-pong-root/: Android.mk  README.md  exploit.c  ping_unhash.c  ping_unhash.h
Shell_code_execution/cve-2015-1538-1/: README  Stagefright_CVE-2015-1538-1_Exploit.py
Xposed/: Readme.md  de.robv.android.xposed.installer_v28_8b8a7e.apk
Xposed/DexHook/: README.md
Xposed/Xposed_sample/: LICENSE  README.md
frida/bruteforce/: bruteforce_pin.py  lolliPin.apk
frida/root_bypass/: rootinspector_nativechecks_bypass.py
frida/ssl_pinning/: ssl.py
html5/: Readme.md
privilege_escalation/: Readme.md  Reference.md  qualc_camera_driver.md
privilege_escalation/PoCForCVE-2015-1528/: README.md
(+448 files in other folders)
